<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Departments">

    <android.support.v7.widget.Toolbar
        android:id="@+id/departmentsToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:background="?attr/colorPrimary"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="55dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v7.widget.CardView
                    app:cardCornerRadius="4dp"
                    android:layout_margin="6dp"
                    app:contentPadding="4dp"
                    app:cardBackgroundColor="@color/colorInfoHead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:padding="4dp"
                        android:textStyle="bold"
                        android:textSize="24dp"
                        android:textColor="@color/colorWhite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Department of Computer Science and Engineering"/>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="4dp"
                    android:layout_margin="6dp"
                    app:cardElevation="6dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="4dp"
                        android:textSize="16dp"
                        android:textColor="@color/colorBlack"
                        android:text="@string/cseDesc"
                        android:background="@color/colorWhite"
                        />
                </android.support.v7.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    />




                <android.support.v7.widget.CardView
                    app:cardCornerRadius="4dp"
                    android:layout_margin="6dp"
                    app:contentPadding="4dp"
                    app:cardBackgroundColor="@color/colorInfoHead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:padding="4dp"
                        android:textStyle="bold"
                        android:textSize="24dp"
                        android:textColor="@color/colorWhite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Department of Electrical and Electronic Engineering"/>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="4dp"
                    android:layout_margin="6dp"
                    app:cardElevation="6dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="4dp"
                        android:textSize="16dp"
                        android:textColor="@color/colorBlack"
                        android:text="@string/eeeDesc"
                        android:background="@color/colorWhite"
                        />
                </android.support.v7.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    />



                <android.support.v7.widget.CardView
                    app:cardCornerRadius="4dp"
                    android:layout_margin="6dp"
                    app:contentPadding="4dp"
                    app:cardBackgroundColor="@color/colorInfoHead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:padding="4dp"
                        android:textStyle="bold"
                        android:textSize="24dp"
                        android:textColor="@color/colorWhite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Department of Civil Engineering"/>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="4dp"
                    android:layout_margin="6dp"
                    app:cardElevation="6dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="4dp"
                        android:textSize="16dp"
                        android:textColor="@color/colorBlack"
                        android:text="@string/ceDesc"
                        android:background="@color/colorWhite"
                        />
                </android.support.v7.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    />


                <android.support.v7.widget.CardView
                    app:cardCornerRadius="4dp"
                    android:layout_margin="6dp"
                    app:contentPadding="4dp"
                    app:cardBackgroundColor="@color/colorInfoHead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:padding="4dp"
                        android:textStyle="bold"
                        android:textSize="24dp"
                        android:textColor="@color/colorWhite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="School of Business Administration"/>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="4dp"
                    android:layout_margin="6dp"
                    app:cardElevation="6dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="4dp"
                        android:textSize="16dp"
                        android:textColor="@color/colorBlack"
                        android:text="@string/bbaDesc"
                        android:background="@color/colorWhite"
                        />
                </android.support.v7.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    />




                <android.support.v7.widget.CardView
                    app:cardCornerRadius="4dp"
                    android:layout_margin="6dp"
                    app:contentPadding="4dp"
                    app:cardBackgroundColor="@color/colorInfoHead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:padding="4dp"
                        android:textStyle="bold"
                        android:textSize="24dp"
                        android:textColor="@color/colorWhite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Department of English"/>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="4dp"
                    android:layout_margin="6dp"
                    app:cardElevation="6dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="4dp"
                        android:textSize="16dp"
                        android:textColor="@color/colorBlack"
                        android:text="@string/engDesc"
                        android:background="@color/colorWhite"
                        />
                </android.support.v7.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    />

                <android.support.v7.widget.CardView
                    app:cardCornerRadius="4dp"
                    android:layout_margin="6dp"
                    app:contentPadding="4dp"
                    app:cardBackgroundColor="@color/colorInfoHead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:padding="4dp"
                        android:textStyle="bold"
                        android:textSize="24dp"
                        android:textColor="@color/colorWhite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Department of Science and Humanities"/>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/colorWhite"
                    app:cardCornerRadius="4dp"
                    android:layout_margin="6dp"
                    app:cardElevation="6dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="4dp"
                        android:textSize="16dp"
                        android:textColor="@color/colorBlack"
                        android:text="@string/scHumDesc"
                        android:background="@color/colorWhite"
                        />
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>