<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClubActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/clubToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:background="?attr/colorPrimary"
        />
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="55dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <android.support.v7.widget.CardView
                    android:layout_margin="4dp"
                    app:cardBackgroundColor="@color/colorOffWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:scaleType="centerCrop"
                            android:adjustViewBounds="true"
                            android:src="@drawable/bcc_day"
                            />
                        <android.support.v7.widget.CardView
                            android:layout_marginTop="6dp"
                            app:cardBackgroundColor="@color/colorInfoHead"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:padding="6dp"
                                android:textColor="@color/colorOffWhite"
                                android:textStyle="bold"
                                android:textSize="16dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="1st BCC day organized by BAIUST Computer Club!"
                                />

                        </android.support.v7.widget.CardView>
                        <TextView
                            android:padding="4dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:textColor="@color/colorBlack"
                            android:text="@string/bcc"
                            />

                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />
                <android.support.v7.widget.CardView
                    android:layout_margin="4dp"
                    app:cardBackgroundColor="@color/colorOffWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:scaleType="centerCrop"
                            android:adjustViewBounds="true"
                            android:src="@drawable/eee_day"
                            />
                        <android.support.v7.widget.CardView
                            android:layout_marginTop="6dp"
                            app:cardBackgroundColor="@color/colorInfoHead"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:padding="6dp"
                                android:textColor="@color/colorOffWhite"
                                android:textStyle="bold"
                                android:textSize="16dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="EEE day orgnized by BAIUST EEE Club!"
                                />

                        </android.support.v7.widget.CardView>
                        <TextView
                            android:padding="4dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:textColor="@color/colorBlack"
                            android:text="@string/eeeClub"
                            />


                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />
                <android.support.v7.widget.CardView
                    android:layout_margin="4dp"
                    app:cardBackgroundColor="@color/colorOffWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:scaleType="centerCrop"
                            android:adjustViewBounds="true"
                            android:src="@drawable/cultural_night"
                            />
                        <android.support.v7.widget.CardView
                            android:layout_marginTop="6dp"
                            app:cardBackgroundColor="@color/colorInfoHead"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:padding="6dp"
                                android:textColor="@color/colorOffWhite"
                                android:textStyle="bold"
                                android:textSize="16dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Students performing at Cultural Night organized by BAIUST Cultural Club!"
                                />

                        </android.support.v7.widget.CardView>
                        <TextView
                            android:padding="4dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:textColor="@color/colorBlack"
                            android:text="@string/culturalClub"
                            />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />
                <android.support.v7.widget.CardView
                    android:layout_margin="4dp"
                    app:cardBackgroundColor="@color/colorOffWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:scaleType="centerCrop"
                            android:adjustViewBounds="true"
                            android:src="@drawable/football_match"
                            />
                        <android.support.v7.widget.CardView
                            android:layout_marginTop="6dp"
                            app:cardBackgroundColor="@color/colorInfoHead"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:padding="6dp"
                                android:textColor="@color/colorOffWhite"
                                android:textStyle="bold"
                                android:textSize="16dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Annual Football Match final organized by BAIUST Sports Club!"
                                />
                        </android.support.v7.widget.CardView>
                        <TextView
                            android:padding="4dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:textColor="@color/colorBlack"
                            android:text="@string/sportsClub"
                            />
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>